--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.14.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "argon2": "^0.28.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "express-validator": "^6.14.1"
+    "express-validator": "^6.14.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
