--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "express-validator": "^6.14.1",
     "jsonwebtoken": "^8.5.1"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.34",
