--- a/package.json
+++ b/package.json
@@ -14,21 +14,25 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.14.0",
+    "@tensorflow/tfjs-node": "^3.18.0",
     "@types/jsonwebtoken": "^8.5.8",
     "argon2": "^0.28.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.34",
     "nodemon": "^2.0.16",
     "prisma": "^3.14.0",
+    "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
   }
 }
