--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/app.js",
+    "start": "node ./dist/app.js",
     "dev": "nodemon ./app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
