--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@prisma/client": "^3.14.0",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.182",
     "argon2": "^0.28.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
