--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/logging-bunyan": "^4.1.0",
     "@prisma/client": "^3.14.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
     "argon2": "^0.28.5",
+    "bunyan": "^1.8.15",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
@@ -27,6 +29,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/bunyan": "^1.8.8",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.34",
     "nodemon": "^2.0.16",
