--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 PORT=8000
 DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA"
 MODEL_PATH="file://model/model.json"
+IMG_WIDTH=224
+IMG_HEIGHT=224
