--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tensorflow/tfjs-node": "^3.18.0",
     "argon2": "^0.28.5",
     "bunyan": "^1.8.15",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.8",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.182",
